  * Tighten dependencies
  * Bump standards version to 4.1.4
  * Bump debhelper compat to 11
  * Library transition from libgrpc3 to libgrpc6 .

  [ Laszlo Boszormenyi (GCS) ]
  * Don't specify parallel to debhelper.
  * Install new C++ headers.
  * Install upstream NOTICE.txt to protobuf-compiler-grpc package.
  * Update packaging bits.
  * Add patch for multiarch library installation.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Fri, 04 May 2018 17:04:13 +0000

grpc (1.3.2-1) unstable; urgency=medium

  [ Pirate Praveen <praveen@onenetbeyond.org> ]
  * Patch to provide a wrapped memcpy for linking (closes: #867541).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Mon, 14 Aug 2017 10:44:38 +0000

grpc (1.3.2-0.2) unstable; urgency=medium

  * Non-maintainer upload.
    * fix-libgrpc++-soname.diff: Update to also fix the soname of
      libgrpc++_error_details.so. (Closes: #863717)

 -- Steinar H. Gunderson <sesse@debian.org>  Thu, 01 Jun 2017 18:11:56 +0200

grpc (1.3.2-0.1) unstable; urgency=medium

  * Non-maintainer upload.
  * New upstream release.
    * Refreshed all patches.
    * Add Build-Dependency on libc-ares-dev.

 -- Steinar H. Gunderson <sesse@debian.org>  Thu, 18 May 2017 18:09:28 +0200

grpc (1.2.5-1+nmu1) unstable; urgency=medium

  * Non-maintainer upload.
  * Update debian/copyright with missing license information. (Closes: #861383)
  * make-pkg-config-files-nonexecutable.diff: New patch, installs .pc files 
    as nonexecutable. Fixes Lintian warning.

 -- Steinar H. Gunderson <sesse@debian.org>  Fri, 28 Apr 2017 18:48:22 +0200

grpc (1.2.5-1+nmu0) unstable; urgency=medium

  * Non-maintainer upload.
  * New upstream release.
    * Fixes CVE-2017-7860 and CVE-2017-7861. (Closes: #860316)
    * Build the C++ library in addition to the C library.
      * New packages libgrpc++-dev and libgrpc++1.
      * Make a new package protobuf-compiler-grpc. (Closes: #818327)
    * Add build-dependency on libprotoc-dev.