@@ -1,6 +1,6 @@
 usr/include/grpc++/
 usr/include/grpcpp/
-usr/lib/libgrpc++*.a
-usr/lib/libgrpc++*.so
-usr/lib/pkgconfig/grpc++.pc
-usr/lib/pkgconfig/grpc++_unsecure.pc
+usr/lib/*/libgrpc++*.a
+usr/lib/*/libgrpc++*.so
+usr/lib/*/pkgconfig/grpc++.pc
+usr/lib/*/pkgconfig/grpc++_unsecure.pc
