@@ -1,3 +1,3 @@
-usr/lib/libgpr.so.*
-usr/lib/libgrpc.so.*
-usr/lib/libgrpc_*.so.*
+usr/lib/*/libgpr.so.*
+usr/lib/*/libgrpc.so.*
+usr/lib/*/libgrpc_*.so.*
