@@ -7,6 +7,8 @@
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
+include /usr/share/dpkg/architecture.mk
+
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 # package maintainers to append CFLAGS
@@ -23,7 +25,8 @@ ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 endif
 
 override_dh_auto_install:
-	$(MAKE) install prefix=$(CURDIR)/debian/tmp/usr
+	$(MAKE) INSTALL_LIBDIR=/lib/$(DEB_HOST_MULTIARCH) \
+		install prefix=$(CURDIR)/debian/tmp/usr
 
 %:
 	dh $@ --list-missing
